[TestModal_Exec/view - 1]
TestModal_Exec/view
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "multi-repo-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExecMenuView",
      "Data": {
        "Type": "ExecMenuView",
        "Handle": "multi-repo-ws",
        "ItemCount": 2,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.modal_ExecView",
      "Data": {
        "Type": "ExecView",
        "Handle": "multi-repo-ws",
        "Command": "",
        "Done": false,
        "RepoCount": 2
      }
    }
  ]
}
---

[TestModal_Exec/dismiss_esc - 1]
TestModal_Exec/dismiss_esc
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ResourceMenuView",
      "Data": {
        "Type": "ResourceMenuView",
        "Handle": "test-ws",
        "ItemCount": 6,
        "SelectedIdx": 0
      }
    },
    {
      "Type": "*views.ExecMenuView",
      "Data": {
        "Type": "ExecMenuView",
        "Handle": "test-ws",
        "ItemCount": 2,
        "SelectedIdx": 0
      }
    }
  ]
}
---
